# lamoda-out-of-stock

./: .env_test  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: checks.yml
app/: config.py  db.py  exceptions.py  utils.py
app/auth/: auth.py  exceptions.py  services.py
app/core/: stock.py
app/stock/: models.py  stock_parser.py  utils.py
tests/: conftest.py  test_utils.py
tests/auth/: test_auth.py  test_services.py
